--- a/hbase-metrics/pom.xml
+++ b/hbase-metrics/pom.xml
@@ -77,6 +77,12 @@
       <artifactId>metrics-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.github.stephenc.findbugs</groupId>
+      <artifactId>findbugs-annotations</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
