HBASE-27373 Fix new spotbugs warnings after upgrading spotbugs to 4.7.2 (#4787)
Signed-off-by: Wellington Chevreuil <wchevreuil@apache.org>

--- a/hbase-protocol/pom.xml
+++ b/hbase-protocol/pom.xml
@@ -42,6 +42,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.stephenc.findbugs</groupId>
+      <artifactId>findbugs-annotations</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
