CDPD-29057: HBase - Replace log4j 1.x with reload4j
(cherry picked from commit 367cf040bd6af7c9d52bee462aeaab1106ce6072)

removed the remaining log4j 1.x

added banned-log4j

excluded reload4j from slf4j-reload4j

Change-Id: Iebbcec0245a36782e9921a2cc547eb361012a9c3

--- a/hbase-assembly/pom.xml
+++ b/hbase-assembly/pom.xml
@@ -192,11 +192,11 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>slf4j-reload4j</artifactId>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>ch.qos.reload4j</groupId>
+      <artifactId>reload4j</artifactId>
     </dependency>
   </dependencies>
   <build>
