--- a/hbase-shaded/hbase-shaded-check-invariants/pom.xml
+++ b/hbase-shaded/hbase-shaded-check-invariants/pom.xml
@@ -56,8 +56,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>ch.qos.reload4j</groupId>
+      <artifactId>reload4j</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- Test dependencies -->
@@ -105,6 +105,7 @@
                     <!-- We leave logging stuff alone -->
                     <exclude>org.slf4j:*</exclude>
                     <exclude>log4j:*</exclude>
+                    <exclude>ch.qos.reload4j:*</exclude>
                     <exclude>commons-logging:*</exclude>
                     <!-- annotations that never change -->
                     <exclude>com.google.code.findbugs:*</exclude>
