--- a/pom.xml
+++ b/pom.xml
@@ -583,7 +583,7 @@
     <junit.version>4.13.2</junit.version>
     <hamcrest.version>1.3</hamcrest.version>
     <opentelemetry.version>0.12.0</opentelemetry.version>
-    <log4j.version>1.2.17-cloudera6</log4j.version>
+    <reload4j.version>1.2.22</reload4j.version>
     <mockito-core.version>2.28.2</mockito-core.version>
     <!--Internally we use a different version of protobuf. See hbase-protocol-shaded-->
     <external.protobuf.groupid>com.google.protobuf</external.protobuf.groupid>
@@ -594,7 +594,7 @@
     <thrift.version>0.14.1</thrift.version>
     <zookeeper.version>3.5.5.7.2.17.0-SNAPSHOT</zookeeper.version>
     <jline.version>2.12</jline.version>
-    <slf4j.version>1.7.30</slf4j.version>
+    <slf4j-reload4j.version>1.7.36</slf4j-reload4j.version>
     <clover.version>4.0.3</clover.version>
     <jamon-runtime.version>2.4.1</jamon-runtime.version>
     <jettison.version>1.5.1</jettison.version>
@@ -1017,29 +1017,35 @@
         <version>${jettison.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
+        <groupId>ch.qos.reload4j</groupId>
+        <artifactId>reload4j</artifactId>
+        <version>${reload4j.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${slf4j.version}</version>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j-reload4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-reload4j</artifactId>
+        <version>${slf4j-reload4j.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>ch.qos.reload4j</groupId>
+            <artifactId>reload4j</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>${slf4j-reload4j.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>${log4j.version}</version>
+        <version>${slf4j-reload4j.version}</version>
       </dependency>
       <!-- Avro dependencies we mostly get transitively, manual version coallescing -->
       <dependency>
@@ -1140,7 +1146,7 @@
           </exclusion>
           <exclusion>
             <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <artifactId>*</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -2114,6 +2120,25 @@
               </rules>
             </configuration>
           </execution>
+          <execution>
+            <id>banned-log4j</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <bannedDependencies>
+                  <excludes>
+                    <exclude>log4j:**</exclude>
+                    <exclude>org.slf4j:slf4j-log4j12</exclude>
+                  </excludes>
+                  <message>
+                    Use reload4j instead
+                  </message>
+                </bannedDependencies>
+              </rules>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
       <!-- parent-module only plugins -->
@@ -3007,6 +3032,14 @@
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
               </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
           <dependency>
@@ -3029,6 +3062,14 @@
               <exclusion>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3054,6 +3095,14 @@
               <exclusion>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3102,6 +3151,14 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
               </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
           <dependency>
@@ -3150,6 +3207,14 @@
               <exclusion>
                 <groupId>com.sun.jersey</groupId>
                 <artifactId>jersey-core</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3165,6 +3230,14 @@
               <exclusion>
                 <groupId>net.minidev</groupId>
                 <artifactId>json-smart</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3225,6 +3298,14 @@
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
               </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
           <dependency>
@@ -3261,6 +3342,14 @@
               <exclusion>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3326,6 +3415,14 @@
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
               </exclusion>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
           <dependency>
@@ -3333,6 +3430,16 @@
             <artifactId>hadoop-minikdc</artifactId>
             <version>${hadoop-two.version}</version>
             <scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>*</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
+            </exclusions>
           </dependency>
           <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -3433,7 +3540,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3465,7 +3572,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3498,7 +3605,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3549,7 +3656,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
               <exclusion>
                 <groupId>io.netty</groupId>
@@ -3606,7 +3713,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
               <exclusion>
                 <groupId>io.netty</groupId>
@@ -3647,7 +3754,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3714,7 +3821,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
@@ -3818,7 +3925,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
               <exclusion>
                 <groupId>org.codehaus.jackson</groupId>
@@ -3842,7 +3949,7 @@
               </exclusion>
               <exclusion>
                 <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
+                <artifactId>*</artifactId>
               </exclusion>
             </exclusions>
           </dependency>
