--- a/hbase-build-configuration/pom.xml
+++ b/hbase-build-configuration/pom.xml
@@ -68,11 +68,6 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
-      <properties>
-        <!-- https://errorprone.info/docs/installation Maven section has details -->
-        <!-- required when compiling with JDK 8 -->
-        <javac.version>9+181-r4173-1</javac.version>
-      </properties>
       <dependencies>
         <dependency>
           <groupId>com.google.errorprone</groupId>
@@ -86,12 +81,6 @@
             </exclusion>
           </exclusions>
         </dependency>
-        <dependency>
-          <groupId>com.google.errorprone</groupId>
-          <artifactId>javac</artifactId>
-          <version>${javac.version}</version>
-          <scope>provided</scope>
-        </dependency>
       </dependencies>
       <build>
         <plugins>
@@ -100,17 +89,12 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <source>${compileSource}</source>
-              <target>${compileSource}</target>
-              <!-- required when compiling with JDK 8 -->
-              <fork>true</fork>
+              <release>${releaseTarget}</release>
               <showWarnings>true</showWarnings>
               <compilerArgs>
                 <arg>-XDcompilePolicy=simple</arg>
                 <!-- All -Xep need to be on single line see: https://github.com/google/error-prone/pull/1115 -->
-                <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode -Xep:FallThrough:OFF -Xep:MutablePublicArray:OFF -Xep:ClassNewInstance:ERROR -Xep:MissingDefault:ERROR</arg>
-                <!-- Required when compiling with JDK 8 -->
-                <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
+                <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode -Xep:FallThrough:OFF -Xep:MutablePublicArray:OFF -Xep:ClassNewInstance:ERROR -Xep:MissingDefault:ERROR -Xep:BanJNDI:WARN</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
@@ -120,6 +104,25 @@
                 </path>
               </annotationProcessorPaths>
             </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>jdk11-required</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireJavaVersion>
+                      <version>[11,)</version>
+                    </requireJavaVersion>
+                  </rules>
+                </configuration>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
