--- a/dev-support/hbase_docker/Dockerfile
+++ b/dev-support/hbase_docker/Dockerfile
@@ -25,9 +25,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update && \
     locales='2.27-*' \
     && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN locale-gen en_US.UTF-8
+    rm -rf /var/lib/apt/lists/* \
+    && \
+    locale-gen en_US.UTF-8
 ENV LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
 
 FROM BASE_IMAGE AS MAVEN_DOWNLOAD_IMAGE
@@ -74,12 +74,15 @@ ENV PATH "${JAVA_HOME}/bin:${MAVEN_HOME}/bin:${PATH}"
 
 # Pull down HBase and build it into /root/hbase-bin.
 WORKDIR /root
-RUN git clone https://gitbox.apache.org/repos/asf/hbase.git -b master
-RUN mvn clean install -DskipTests assembly:single -f ./hbase/pom.xml
-RUN mkdir -p hbase-bin
-RUN find /root/hbase/hbase-assembly/target -iname '*.tar.gz' -not -iname '*client*' \
-  | head -n 1 \
-  | xargs -I{} tar xzf {} --strip-components 1 -C /root/hbase-bin
+RUN git clone https://gitbox.apache.org/repos/asf/hbase.git -b master \
+    && \
+    mvn clean install -DskipTests assembly:single -f ./hbase/pom.xml \
+    && \
+    mkdir -p hbase-bin \
+    && \
+    find /root/hbase/hbase-assembly/target -iname '*.tar.gz' -not -iname '*client*' \
+    | head -n 1 \
+    | xargs -I{} tar xzf {} --strip-components 1 -C /root/hbase-bin
 
 # Set HBASE_HOME, add it to the path, and start HBase.
 ENV HBASE_HOME /root/hbase-bin
